--- a/css/style.css
+++ b/css/style.css
@@ -875,7 +875,28 @@ textarea.form-popup__input {
   position: relative;
   padding: 15px 0 15px;
   height: 410px;
-  background: url("../img/top-screen-mobile-small.jpg") center/cover no-repeat;
+}
+
+.preview__image {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.preview__image img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .preview__title {
@@ -1975,7 +1996,6 @@ textarea.form-popup__input {
   .preview {
     padding: 20px 0 20px;
     height: 370px;
-    background: url("../img/top-screen-mobile.jpg") center/cover no-repeat;
   }
 
   .preview__list {
@@ -2143,7 +2163,6 @@ textarea.form-popup__input {
   .preview {
     padding-top: 80px;
     height: 768px;
-    background: url("../img/top-screen-bg.jpg") top center/cover no-repeat;
   }
 
   .preview__title {
