--- a/css/style-main.css
+++ b/css/style-main.css
@@ -1025,14 +1025,17 @@ textarea.form-popup__input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  padding: 5px 0;
+}
+
+.breadcrumbs__list li:last-child .breadcrumbs__item {
+  margin-right: 0;
 }
 
 .breadcrumbs__item {
   position: relative;
   display: inline-block;
-  padding: 10px 0;
+  padding: 5px 0;
   margin-right: 20px;
   font-size: 16px;
   white-space: nowrap;
@@ -1067,21 +1070,61 @@ textarea.form-popup__input {
   display: none;
 }
 
-.article {
-  padding: 20px 0;
+.article-main {
+  height: 250px;
 }
 
-.article__title {
+.article-main ._container {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.article-main__title {
   margin-bottom: 15px;
   font-size: 32px;
   font-weight: 700;
   text-align: center;
 }
 
-.article__text {
-  margin-bottom: 30px;
+.article-main__title span {
+  color: #b20c1c;
+  white-space: nowrap;
+}
+
+.article-main__title span img {
+  position: relative;
+  top: 25px;
+  margin: 0 3px;
+  width: 10px;
+}
+
+.article-main__text {
+  margin: 0 auto;
+  max-width: 780px;
   font-family: "PT Sans", sans-serif;
   text-align: center;
+}
+
+.article {
+  padding: 20px 0;
+}
+
+.article__main-icon {
+  margin-bottom: 30px;
+  width: 50px;
+}
+
+.article__main-icon img {
+  width: 100%;
 }
 
 .article__item h2 {
@@ -1789,6 +1832,186 @@ textarea.form-popup__input {
           box-shadow: 0 0 10px 0 rgba(66, 0, 254, 0.55);
 }
 
+.about {
+  padding: 30px 0 0;
+}
+
+.about__column {
+  margin-bottom: 20px;
+}
+
+.about__column_middle a {
+  color: #329cff;
+  background-color: rgba(50, 156, 255, 0.2);
+}
+
+.about__column_right {
+  display: none;
+}
+
+.about__title {
+  margin-bottom: 30px;
+  font-size: 32px;
+  text-align: center;
+}
+
+.about__text {
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-family: "PT Sans", sans-serif;
+}
+
+.about__title-list {
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+.about__list {
+  padding-left: 20px;
+}
+
+.about__list li {
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-family: "PT Sans", sans-serif;
+  list-style: disc;
+}
+
+.item-about:last-child {
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.item-about h2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-top: 1px solid #e5e5e5;
+  cursor: pointer;
+}
+
+.item-about h2._active .item-about__icon::before {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.item-about h2._active .item-about__icon::after {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.item-about__title {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  display: block;
+  padding: 10px 0 10px 0;
+  font-size: 16px;
+  font-weight: 700;
+  color: #333;
+}
+
+.item-about__icon {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30px;
+          flex: 0 0 30px;
+  display: block;
+  width: 30px;
+  height: 40px;
+  position: relative;
+  z-index: -1;
+}
+
+.item-about__icon::before,
+.item-about__icon::after {
+  content: '';
+  position: absolute;
+  top: calc(50% - 2px);
+  height: 2px;
+  width: 15px;
+  background-color: #333;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.item-about__icon::before {
+  right: 10px;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.item-about__icon::after {
+  right: 0;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.item-about__list {
+  display: none;
+}
+
+.item-about__link {
+  display: inline-block;
+  margin-left: 20px;
+  padding: 10px 0;
+  font-size: 14px;
+  color: #333;
+}
+
+.contents-about__body {
+  padding: 0 35px;
+}
+
+.contents-about__title-list {
+  position: relative;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.contents-about__title-list::before {
+  content: '';
+  position: absolute;
+  left: -20px;
+  height: 100%;
+  width: 6px;
+  background-color: #329cff;
+}
+
+.contents-about__list {
+  padding-left: 20px;
+}
+
+.contents-about__list .contents-about__link::before {
+  left: -40px;
+}
+
+.contents-about__link {
+  position: relative;
+  display: inline-block;
+  padding: 5px 0;
+  font-size: 16px;
+  color: #333;
+}
+
+.contents-about__link::before {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: -20px;
+  height: 22px;
+  width: 6px;
+  background-color: #999;
+  display: none;
+}
+
 @media (min-width: 479.98px) {
   .caption__button {
     width: auto;
@@ -1943,6 +2166,29 @@ textarea.form-popup__input {
 
   .item-articles_01 {
     height: 100%;
+  }
+
+  .about__body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
+  .about__column_left {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 300px;
+            flex: 0 0 300px;
+  }
+
+  .about__column_middle {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    padding: 0 0 0 20px;
+  }
+
+  .about__title {
+    text-align: left;
   }
 }
 
@@ -2151,6 +2397,14 @@ textarea.form-popup__input {
     left: 0;
   }
 
+  .article-main__title {
+    font-size: 36px;
+  }
+
+  .article-main__title span img {
+    top: 29px;
+  }
+
   .article__title-list:hover {
     text-decoration: underline;
   }
@@ -2289,6 +2543,27 @@ textarea.form-popup__input {
         -ms-flex: 0 0 33.333%;
             flex: 0 0 33.333%;
   }
+
+  .about__column_middle a:hover {
+    background-color: transparent;
+    text-decoration: underline;
+  }
+
+  .item-about__title:hover {
+    text-decoration: underline;
+  }
+
+  .item-about__link:hover {
+    text-decoration: underline;
+  }
+
+  .contents-about__link:hover {
+    text-decoration: underline;
+  }
+
+  .contents-about__link:hover::before {
+    display: block;
+  }
 }
 
 @media (min-width: 1210px) {
@@ -2328,6 +2603,24 @@ textarea.form-popup__input {
 
   .item-articles_01 .item-articles__title {
     font-size: 34px;
+  }
+
+  .about__column_middle {
+    padding: 0 20px;
+  }
+
+  .about__column_right {
+    display: block;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 300px;
+            flex: 0 0 300px;
+  }
+
+  .contents-about__title {
+    margin-bottom: 15px;
+    padding: 10px 15px;
+    color: #fff;
+    background-color: #329cff;
   }
 }
 
