--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,15 @@ body._lock {
   padding: 0 15px;
 }
 
+.header {
+  position: fixed;
+  z-index: 20;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+}
+
 .header__content {
   position: relative;
   display: -webkit-box;
@@ -132,6 +141,9 @@ body._lock {
           justify-content: center;
   padding: 25px 15px 15px 15px;
   height: 226px;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header__content::after {
@@ -144,6 +156,9 @@ body._lock {
           flex: 0 0 53px;
   position: relative;
   z-index: 2;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header__logo img {
@@ -159,10 +174,17 @@ body._lock {
   font-size: 16px;
   font-weight: 700;
   line-height: 1.2;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header__slogan b {
   color: #ed1c24;
+}
+
+.header_footer {
+  position: static;
 }
 
 .header_footer .header__content {
@@ -208,6 +230,9 @@ body._lock {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: 15px;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .info-header__column_2 {
@@ -222,6 +247,9 @@ body._lock {
       -ms-flex-align: center;
           align-items: center;
   margin-top: 10px;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .info-header__item {
@@ -348,24 +376,6 @@ body._lock {
 
 .menu-header {
   background-color: #253544;
-  opacity: 1;
-  visibility: visible;
-  -webkit-transition: all ease 0.5s;
-  -o-transition: all ease 0.5s;
-  transition: all ease 0.5s;
-}
-
-.menu-header._scroll {
-  position: fixed;
-  z-index: 20;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-.menu-header._disable {
-  opacity: 0;
-  visibility: hidden;
 }
 
 .menu-header__content {
@@ -842,6 +852,10 @@ textarea.form-popup__input {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+  margin-top: 296px;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .section__title {
@@ -2148,6 +2162,10 @@ textarea.form-popup__input {
     width: auto;
   }
 
+  .page {
+    margin-top: 170px;
+  }
+
   .preview {
     padding-top: 80px;
     height: 768px;
@@ -2225,6 +2243,29 @@ textarea.form-popup__input {
 }
 
 @media (max-width: 1023.98px) {
+  .header._scroll .header__logo,
+  .header._scroll .header__slogan,
+  .header._scroll .info-header__column_1 {
+    height: 0;
+    visibility: hidden;
+    opacity: 0;
+    margin: 0;
+    padding: 0;
+  }
+
+  .header._scroll .info-header__column_2 {
+    margin: 0;
+  }
+
+  .header._scroll .header__content {
+    padding: 0 15px 10px;
+    height: 100px;
+  }
+
+  .header._scroll + .page {
+    margin-top: 180px;
+  }
+
   .header_footer .header__content {
     height: auto;
   }
