--- a/css/style.css
+++ b/css/style.css
@@ -884,31 +884,9 @@ textarea.form-popup__input {
 }
 
 .preview {
-  position: relative;
   padding: 15px 0 15px;
   height: 410px;
-}
-
-.preview__image {
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-
-.preview__image img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -o-object-fit: cover;
-     object-fit: cover;
+  background: url("../img/top-screen-mobile-small.jpg") center/cover no-repeat;
 }
 
 .preview__title {
@@ -1996,6 +1974,10 @@ textarea.form-popup__input {
 
 @media (min-width: 479.98px) {
   .preview {
+    background-image: url("../img/top-screen-mobile.jpg");
+  }
+
+  .preview {
     padding: 20px 0 20px;
     height: 370px;
   }
@@ -2169,6 +2151,7 @@ textarea.form-popup__input {
   .preview {
     padding-top: 80px;
     height: 768px;
+    background-image: url("../img/top-screen-bg.jpg");
   }
 
   .preview__title {
