--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 
 body {
   line-height: 1;
-  font-family: "Fira Sans", sans-serif;
+  font-family: "Arial", sans-serif;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -46,7 +46,7 @@ body {
 input,
 button,
 textarea {
-  font-family: "Fira Sans", sans-serif;
+  font-family: "Arial", sans-serif;
 }
 
 input::-ms-clear {
@@ -1653,7 +1653,7 @@ textarea.form-popup__input {
   display: -ms-flexbox;
   display: flex;
   margin: 0 -15px;
-  background: url("../img/steps.png") top 145px center no-repeat;
+  background: url("../img/steps.png") top 165px center no-repeat;
   background-size: 877px 409px;
 }
 
@@ -1722,7 +1722,7 @@ textarea.form-popup__input {
 }
 
 .item-steps__text {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   text-align: left;
 }
 
@@ -2187,7 +2187,7 @@ textarea.form-popup__input {
   }
 
   .steps__body {
-    background-position: top 115px center;
+    background-position: top 125px center;
     background-size: 700px 326px;
   }
 
