--- a/css/style-main.css
+++ b/css/style-main.css
@@ -1873,10 +1873,6 @@ textarea.form-popup__input {
   background-color: rgba(50, 156, 255, 0.2);
 }
 
-.about__column_right {
-  display: none;
-}
-
 .about__menu {
   -webkit-transition: all 0.5s ease 0s;
   -o-transition: all 0.5s ease 0s;
@@ -1896,85 +1892,82 @@ textarea.form-popup__input {
 }
 
 .about__contents {
-  background-color: #f7f7f7;
+  position: fixed;
+  z-index: 20;
+  right: 0;
+  top: 320px;
+  padding: 0 10px;
   -webkit-transition: all 0.5s ease 0s;
   -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
 }
 
 .about__contents._scroll {
-  position: fixed;
-  z-index: 20;
   top: 190px;
-  background-color: #fff;
-  width: 300px;
 }
 
-.about__contents._disable {
-  top: 20px;
-}
-
-.about__title {
+.about__article h1 {
   margin-bottom: 30px;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 700;
   text-transform: uppercase;
   text-align: center;
 }
 
-.about__text {
+.about__article p {
   margin-bottom: 20px;
   font-size: 14px;
   text-align: justify;
 }
 
-.about__title-article {
+.about__article p:last-of-type {
+  text-align: right;
+}
+
+.about__article h2 {
   margin-bottom: 20px;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 700;
   text-transform: uppercase;
 }
 
-.about__title-section {
+.about__article h3 {
   margin-bottom: 20px;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
 }
 
-.about__list > li {
+.about__article ol > li {
   margin-bottom: 20px;
   font-size: 14px;
   text-align: justify;
   list-style-position: inside;
 }
 
-.about__sublist {
-  padding-top: 15px;
-  padding-left: 25px;
-}
-
-.about__sublist li {
-  list-style-type: disc;
-  margin-bottom: 10px;
-  font-size: 14px;
-  text-align: justify;
-}
-
-.about__date {
-  font-size: 16px;
-  text-align: right;
-}
-
-.about__subtitle {
-  margin-bottom: 30px;
-  font-size: 16px;
+.about__article ol:first-of-type {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.about__article ol:first-of-type li {
+  list-style: none;
+}
+
+.about__article ul {
+  padding-top: 15px;
+  padding-left: 25px;
+}
+
+.about__article ul li {
+  list-style-type: disc;
+  margin-bottom: 10px;
+  font-size: 14px;
+  text-align: justify;
 }
 
 .item-about:last-child {
@@ -2071,8 +2064,36 @@ textarea.form-popup__input {
   color: #333;
 }
 
+.contents-about__title {
+  display: none;
+}
+
 .contents-about__body {
-  padding: 0 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0;
+  opacity: 0;
+  visibility: hidden;
+  width: 0;
+  height: 0;
+  background-color: #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.contents-about__body._active {
+  opacity: 1;
+  visibility: visible;
+  width: auto;
+  height: auto;
+  padding: 10px 15px;
 }
 
 .contents-about__title-list {
@@ -2114,7 +2135,6 @@ textarea.form-popup__input {
 
 .contents-about__list {
   padding-left: 20px;
-  height: 0;
   overflow: hidden;
   -webkit-transition: all 0.5s ease 0s;
   -o-transition: all 0.5s ease 0s;
@@ -2152,6 +2172,65 @@ textarea.form-popup__input {
 
 .contents-about__link._active::before {
   opacity: 1;
+}
+
+.contents-about__button {
+  width: 60px;
+  height: 60px;
+  font-size: 0;
+  background: #329cff url("../img/icons/about-icon.png") center/50px no-repeat;
+  border-radius: 50%;
+}
+
+.contents-about__button._active {
+  padding: 0 10px 0 80px;
+  width: 100%;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: left;
+  color: #fff;
+  border-radius: 0;
+  background: #329cff url("../img/icons/about-icon.png") left 10px center/50px no-repeat;
+}
+
+.contents-about__back {
+  position: relative;
+  display: block;
+  margin: 20px auto 0;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.64);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.64);
+  border-radius: 50%;
+}
+
+.contents-about__back::before,
+.contents-about__back::after {
+  content: '';
+  position: absolute;
+  width: 15px;
+  height: 2px;
+  background-color: #333;
+  top: calc(50% - 1px);
+}
+
+.contents-about__back::before {
+  left: calc(50% - 12px);
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.contents-about__back::after {
+  right: calc(50% - 12px);
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.contents-about__back._show {
+  display: none;
 }
 
 @media (min-width: 479.98px) {
@@ -2334,7 +2413,7 @@ textarea.form-popup__input {
     padding: 0 0 0 20px;
   }
 
-  .about__title {
+  .about__article h1 {
     text-align: left;
   }
 }
@@ -2710,19 +2789,31 @@ textarea.form-popup__input {
     width: 300px;
   }
 
-  .about__title {
+  .about__contents {
+    top: 190px;
+  }
+
+  .about__article h1 {
     font-size: 28px;
   }
 
-  .about__text {
+  .about__article p {
     font-size: 16px;
   }
 
-  .about__list > li {
+  .about__article h2 {
+    font-size: 28px;
+  }
+
+  .about__article h3 {
+    font-size: 20px;
+  }
+
+  .about__article ol > li {
     font-size: 16px;
   }
 
-  .about__sublist li {
+  .about__article ul li {
     font-size: 16px;
   }
 
@@ -2783,18 +2874,45 @@ textarea.form-popup__input {
   }
 
   .about__column_right {
-    display: block;
     -webkit-box-flex: 0;
         -ms-flex: 0 0 300px;
             flex: 0 0 300px;
   }
 
+  .about__contents {
+    position: static;
+  }
+
+  .about__contents._scroll {
+    position: fixed;
+    width: 300px;
+    right: auto;
+  }
+
   .contents-about__title {
+    display: block;
     position: relative;
     margin-bottom: 15px;
     padding: 10px 15px 10px 60px;
     color: #fff;
     background: #329cff url("../img/icons/about-icon.png") left 15px center/35px no-repeat;
+  }
+
+  .contents-about__body {
+    opacity: 1;
+    visibility: visible;
+    width: auto;
+    height: auto;
+    padding: 10px 15px;
+    border-bottom: none;
+  }
+
+  .contents-about__button {
+    display: none;
+  }
+
+  .contents-about__back {
+    display: none;
   }
 }
 
