--- a/css/style-main.css
+++ b/css/style-main.css
@@ -875,6 +875,7 @@ textarea.form-popup__input {
 }
 
 .footer__title {
+  height: 22px;
   margin-bottom: 20px;
   font-size: 20px;
   line-height: 100%;
@@ -883,6 +884,7 @@ textarea.form-popup__input {
 }
 
 .footer__title_empty {
+  height: 0;
   font-size: 0;
   margin-bottom: 0;
 }
@@ -1005,6 +1007,7 @@ textarea.form-popup__input {
   position: relative;
   display: inline-block;
   margin-top: 20px;
+  font-size: 16px;
   color: inherit;
 }
 
@@ -2431,6 +2434,12 @@ textarea.form-popup__input {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 50%;
             flex: 0 0 50%;
+  }
+
+  .footer__title_empty {
+    height: 22px;
+    font-size: 20px;
+    margin-bottom: 20px;
   }
 
   .footer__content ._container {
